feat(*): add toast for update conductor on read mode

--- a/libs/MediasForConductor/MediasForConductor.module.css
+++ b/libs/MediasForConductor/MediasForConductor.module.css
@@ -48,3 +48,9 @@
 .mediaTitle::first-letter {
   text-transform: uppercase;
 }
+
+@media screen and (max-width: 500px) {
+  .medias {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
