--- a/libs/Layout/Layout.module.css
+++ b/libs/Layout/Layout.module.css
@@ -1,4 +1,3 @@
-
 .header {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
@@ -6,6 +5,7 @@
   justify-content: space-between;
   align-items: center;
   align-content: center;
+  gap: 10px;
   background: var(--color-bg-accent);
 }
 
@@ -15,6 +15,7 @@
 
 .logo {
   text-align: left;
+  display: flex;
 }
 
 .param {
@@ -28,4 +29,28 @@
 
 .footer {
   background: var(--color-bg-accent);
+  padding: 15px;
+}
+
+.coffe {
+  justify-self: flex-end;
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  font-size: 0.8em;
+}
+
+@media screen and (max-width: 500px) {
+  .coffe {
+    position: fixed;
+    bottom: 15px;
+    background: var(--color-bg-accent);
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid var(--color-border);
+  }
+  
+  .footer {
+    padding: 15px 15px 80px;
+  }
 }
