--- a/libs/Summary/Summary.module.css
+++ b/libs/Summary/Summary.module.css
@@ -1,6 +1,6 @@
 .container {
   position: fixed;
-  bottom: 30px;
+  bottom: 0;
   left: 10px;
   top: 60px;
   display: grid;
@@ -21,6 +21,7 @@
   grid-template-rows: 1fr auto;
   width: 255px;
   height: 100%;
+  padding-bottom: 20px;
 }
 
 .chroniclesContainer {
