--- a/styles/Links.module.css
+++ b/styles/Links.module.css
@@ -10,7 +10,8 @@
   flex-direction: column;
   gap: 10px;
   min-height: 100vh;
-  width: 500px;
+  max-width: 600px;
+  min-width: 500px;
   margin: 20px;
 }
 
@@ -23,4 +24,21 @@
   width: 100%;
   border-radius: 10px;
   background: rgba(0, 0, 0, .05);
+}
+
+.delete {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.label {
+  font-family: 'Source-semi-bold';
+}
+
+@media screen and (max-width: 500px){
+  .page {
+    min-width: 100%;
+    max-width: inherit;
+  }
 }
