--- a/libs/ClipBoard/ClipBoard.module.css
+++ b/libs/ClipBoard/ClipBoard.module.css
@@ -1,92 +1,89 @@
 .container {
-    display: grid;
-    position: relative;
-    grid-template-columns: 1fr auto;
-    justify-content: center;
-    align-items: center;
-    grid-column-gap: 10px;
-    font-size: 1rem;
+  display: grid;
+  position: relative;
+  grid-template-columns: 1fr auto;
+  justify-content: center;
+  align-items: center;
+  grid-column-gap: 10px;
+  font-size: 1rem;
 }
 
 .msg {
-    opacity: 0;
-    background: green;
-    color: white;
-    padding: 3px;
-    font-size: .9rem;
-    margin: 5px 0;
-    position: absolute;
-    bottom: calc(100%);
-    white-space: nowrap;
-    animation: bounce-in 1s  2 alternate;
-    border-radius: 3px;
-    z-index: 10;
-    box-shadow: 3px 3px 3px rgba(0,0,0,.3);
+  opacity: 0;
+  background: green;
+  color: white;
+  padding: 3px;
+  font-size: 0.9rem;
+  margin: 5px 0;
+  position: absolute;
+  bottom: calc(100%);
+  white-space: nowrap;
+  animation: bounce-in 1s 2 alternate;
+  border-radius: 3px;
+  z-index: 10;
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
 }
 
-.container[data-copy='true'] .input,
-.container[data-copy='true'] .txt{
-    color: green;
-    font-style: italic;
+.container[data-copy="true"] .input,
+.container[data-copy="true"] .txt {
+  color: green;
+  font-style: italic;
 }
 
 .label {
-    grid-column: 1/3;
-    padding-bottom: 5px;
+  grid-column: 1/3;
+  padding-bottom: 5px;
 }
 
 .label::first-letter {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 .label:after {
-    content: ':';
+  content: ":";
 }
 
 .memo {
-    position: relative;
-    cursor: pointer;
-    width: 23px;
-    height: 30px;
-    box-sizing: border-box;
-    margin: 6px;
-    cursor: pointer;
+  position: relative;
+  cursor: pointer;
+  width: 23px;
+  height: 30px;
+  box-sizing: border-box;
+  margin: 6px;
+  cursor: pointer;
 }
 
 .memo:before,
 .memo:after {
-    content: '';
-    display: block;
-    position: absolute;
-    box-sizing: border-box;
-    background: var(--color-bg-accent);
-    border-radius: 4px;
-    top: 0;
-    left:0;
-    right:0;
-    bottom: 0;
-    transform-origin: center center;
-    transition: 200ms ease-in-out;
-
+  content: "";
+  display: block;
+  position: absolute;
+  box-sizing: border-box;
+  background: var(--color-bg-accent);
+  border-radius: 4px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transform-origin: center center;
+  transition: 200ms ease-in-out;
 }
 
 .memo:before {
-    border: 1px solid var(--color-link);
-    transform-origin: center center;
-    transform: translate(-3px, -3px);
+  border: 1px solid var(--color-link);
+  transform-origin: center center;
+  transform: translate(-3px, -3px);
 }
 
 .memo:after {
-    border: 1px solid var(--color-link);
-    transform: translate(3px, 3px);
+  border: 1px solid var(--color-link);
+  transform: translate(3px, 3px);
 }
 
-
 .memo:hover:before {
-    transform: translate(3px, 3px) rotate(2deg);
-
+  transform: translate(3px, 3px) rotate(2deg);
 }
 
 .memo:hover:after {
-    transform: translate(-3px, -3px) rotate(-2deg);
+  transform: translate(-3px, -3px) rotate(-2deg);
 }
