--- a/components/CounterColumnists/CounterColumnists.module.css
+++ b/components/CounterColumnists/CounterColumnists.module.css
@@ -1,31 +1,25 @@
 .content {
-    display: flex;
-    justify-content: space-between;
-    gap: 5px;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  gap: 5px;
+  align-items: center;
 }
 
+.columnists {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  justify-content: flex-end;
+  flex-grow: 1;
+}
 
 .counters {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
-    justify-content: flex-end;
-}
-
-
-.counter:after {
-    content: ' / '
-}
-.counter:last-child:after {
-    content: ''
+  flex-grow: 2;
+  text-align: left;
 }
 
 @media screen and (max-width: 500px) {
-
-    .content {
-        flex-direction: column;
-    }
-    
-    
+  .content {
+    flex-direction: column;
+  }
 }
