--- a/Page-Related/Manage/Manage.module.css
+++ b/Page-Related/Manage/Manage.module.css
@@ -10,8 +10,7 @@
   flex-direction: column;
   gap: 10px;
   min-height: 100vh;
-  max-width: 600px;
-  min-width: 500px;
+  width: 600px;
   margin: 20px;
 }
 
@@ -25,9 +24,8 @@
   font-family: 'Source-semi-bold';
 }
 
-@media screen and (max-width: 500px){
+@media screen and (max-width: 600px){
   .page {
-    min-width: 100%;
-    max-width: inherit;
+    width: 100%;
   }
 }
