--- a/Layouts/LayoutConductorManager/LayoutConductorManager.module.css
+++ b/Layouts/LayoutConductorManager/LayoutConductorManager.module.css
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 600px;
+  width: 600px;
   gap: 10px;
   padding: 15px 0;
 }
