--- a/components/Tablets/Tablets.module.css
+++ b/components/Tablets/Tablets.module.css
@@ -5,3 +5,11 @@
   display: flex;
   flex-direction: column-reverse;
 }
+
+@media screen and (max-width: 600px) {
+  
+  .container {
+    bottom: 50px;
+    right: 8px;
+  }
+}
