--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,22 +1,22 @@
 @font-face {
-  font-family: 'Source';
-  src: url('/fonts/SourceSansPro-Regular.ttf') format('truetype');
+  font-family: "Source";
+  src: url("/fonts/SourceSansPro-Regular.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Source-bold';
-  src: url('/fonts/SourceSansPro-Bold.ttf') format('truetype');
+  font-family: "Source-bold";
+  src: url("/fonts/SourceSansPro-Bold.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Source-semi-bold';
-  src: url('/fonts/SourceSansPro-SemiBold.ttf') format('truetype');
+  font-family: "Source-semi-bold";
+  src: url("/fonts/SourceSansPro-SemiBold.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Source-light';
-  src: url('/fonts/SourceSansPro-Bold.ttf') format('truetype');
-  font-weight: 'thin';
+  font-family: "Source-light";
+  src: url("/fonts/SourceSansPro-Bold.ttf") format("truetype");
+  font-weight: "thin";
 }
 
 :root {
@@ -35,13 +35,17 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Source', sans-serif;
+  font-family: "Source", sans-serif;
 
   color: var(--color-text);
   font-size: 16px;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   margin: 0;
 }
 
@@ -122,14 +126,14 @@ fieldset {
   flex-direction: column;
   gap: 3px;
   border: none;
-  margin:0;
+  margin: 0;
   padding: 0;
 }
 
 label {
   padding-left: 5px;
   margin: 0;
-  font-family: 'Source-semi-bold';
+  font-family: "Source-semi-bold";
   text-transform: uppercase;
 }
 
@@ -139,7 +143,7 @@ button[type="reset"],
 }
 
 .checkbox {
-  --size-checkbox:15px;
+  --size-checkbox: 15px;
   width: var(--size-checkbox);
   position: relative;
   height: var(--size-checkbox);
@@ -148,24 +152,24 @@ button[type="reset"],
   transition: 200ms ease-in-out;
 }
 
-.checkbox:before{
-  --size-checkbox-before:50%;
-  content:'';
+.checkbox:before {
+  --size-checkbox-before: 50%;
+  content: "";
   position: absolute;
-  top:var(--size-checkbox-before);
-  right:var(--size-checkbox-before);
-  bottom:var(--size-checkbox-before);
-  left:var(--size-checkbox-before);
+  top: var(--size-checkbox-before);
+  right: var(--size-checkbox-before);
+  bottom: var(--size-checkbox-before);
+  left: var(--size-checkbox-before);
   background: var(--color-link);
 }
 
-.checkbox[data-checked='true']:before{
-  --size-checkbox-before:2px;
+.checkbox[data-checked="true"]:before {
+  --size-checkbox-before: 2px;
 }
 
 .crossInput {
   position: absolute;
-  top:2px;
+  top: 2px;
   bottom: 2px;
   right: 15px;
   display: flex;
@@ -174,8 +178,9 @@ button[type="reset"],
   cursor: pointer;
 }
 
-.crossInput::before,.crossInput:after {
-  content:'';
+.crossInput::before,
+.crossInput:after {
+  content: "";
   position: absolute;
   height: 2px;
   width: 15px;
@@ -198,7 +203,6 @@ button:first-letter {
   text-transform: uppercase;
 }
 
-
 .block {
   display: flex;
   flex-direction: column;
@@ -207,21 +211,20 @@ button:first-letter {
   padding: 10px;
   width: 100%;
   border-radius: 10px;
-  background: rgba(0, 0, 0, .05);
+  background: rgba(0, 0, 0, 0.05);
 }
 
-.noResult{
+.noResult {
   text-align: center;
   font-size: 1.2em;
-  background: rgba(0, 0, 0, .1);
+  background: rgba(0, 0, 0, 0.1);
   padding: 10px;
   border-radius: 5px;
 }
 
 button:disabled {
-  opacity: .5;
+  opacity: 0.5;
 }
-
 
 /** alert transition **/
 
@@ -241,4 +244,11 @@ button:disabled {
   opacity: 0;
   transform: scale(0.9);
   transition: opacity 300ms, transform 300ms;
+}
+
+@media screen and (max-width: 400px) {
+  input {
+    padding: 5px;
+    font-size: 1rem;
+  }
 }
