--- a/components/TwitchChat/TwitchChat.module.css
+++ b/components/TwitchChat/TwitchChat.module.css
@@ -1,9 +1,19 @@
 .container {
-    display: grid;
-    grid-template-rows: auto 250px auto;
-    gap: 10px;
+  display: grid;
+  grid-template-rows: auto 250px auto;
+  gap: 10px;
+  height: 400px;
+}
+
+.chatContainer {
+  position: relative;
 }
 
 .chat {
-    height: 400px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  overflow-y: auto;
 }
